	(elmo-delete-directory): change IF to WHEN; reindent.
	(elmo-delete-directory): simplify with DOLIST.
	(elmo-list-filter): simplify.
	(elmo-list-delete-if-smaller): remove (was not used).
	(elmo-delete-if): grammar fix in docstring.
	(elmo-delete-if): simplify.
	(elmo-string-match-member): simplify with DOLIST.
	(elmo-string-matched-member): ditto.
	(elmo-get-message-id-from-header): simplify.

2016-12-18  Piotr Trojanek  <piotr.trojanek@gmail.com>

	* elmo-file.el (elmo-file-detect-content-type): rewrite LET
	followed by SETQ.

2016-12-13  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* modb-entity.el (elmo-msgdb-create-message-entity-from-header):
	[modb-standard-entity-handler] Fix the case that
	elmo-msgdb-extra-fields is nil.
	Cf. https://github.com/wanderlust/wanderlust/issues/135

2016-11-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* modb-entity.el (modb-standard-collect-field-values-from-header)
	(modb-standard-get-references-for-entity)
	(modb-standard-get-message-id-for-entity)
	(modb-standard-set-field-name-cache): New functions.
	(modb-standard-reserved-fields): New constant.
	(modb-standard-field-name-cache): New variable.
	(elmo-msgdb-create-message-entity-from-header):
	[modb-standard-entity-handler] Use them.  Improve performance.

2016-11-20  Piotr Trojanek  <piotr.trojanek@gmail.com>

	* elmo-util.el (elmo-list-insert): improve performance.
	(elmo-get-file-string): simplify.

2016-11-14  Piotr Trojanek  <piotr.trojanek@gmail.com>

	* elmo-util.el (elmo-get-passwd): fix previous change to this
	routine, where passwords were only appended to non-empty alists.

2016-11-09  Piotr Trojanek  <piotr.trojanek@gmail.com>

	* elmo-util.el (elmo-get-passwd): while new password was appended
	the old ones were becaming a garbage without being erased.

2016-10-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* elmo-util.el (elmo-object-save): Fix error on XEmacs.

2016-09-22  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* elmo-date.el (elmo-match-substring): Abolished.
